jar update and some other things